# discord-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
src/discord_mcp/: discord_client.py  server.py  types.py
tests/: conftest.py  test_discord_client.py  test_server.py  test_types.py
