[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "Discord MCP server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]~=1.0.0",
    "httpx~=0.27.0",
    "pydantic~=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.24",
    "respx~=0.22",
]

[project.scripts]
discord-mcp = "discord_mcp.server:main"
